feat: update userinfo
